--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/main.css">
+  <link rel="stylesheet" href="./styles/home.css">
+  <link rel="stylesheet" href="./styles/responsive.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@300;400;700;900&display=swap"
     rel="stylesheet">
   <title>Ecoleta</title>
